--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Scroll Websites</title>
     <link rel="stylesheet" href="styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
+      integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
     <!--Navbar Selection-->
@@ -49,13 +55,40 @@
     <div class="main" id="about">
       <div class="main__container">
         <div class="main__img--container">
-          <div class="main__img--card">ICON</div>
+          <div class="main__img--card"><i class="fas fa-layer-group"></i></div>
         </div>
         <div class="main__content">
           <h1>What do we do?</h1>
           <h2>We help businesses scale</h2>
           <p>Schedule a call to learn more about our services</p>
           <button class="main__btn"><a href="#">Schedule call</a></button>
+        </div>
+      </div>
+    </div>
+
+    <!-- Services Section -->
+    <div class="services" id="services">
+      <h1>Our Services</h1>
+      <div class="services__wrapper">
+        <div class="services__card">
+          <h2>Custom Colorways</h2>
+          <p>AI Powered technology</p>
+          <div class="services__btn"><button>Get Started</button></div>
+        </div>
+        <div class="services__card">
+          <h2>Are you Ready</h2>
+          <p>Take the leap</p>
+          <div class="services__btn"><button>Get Started</button></div>
+        </div>
+        <div class="services__card">
+          <h2>Full Gradients</h2>
+          <p>100 Combinations</p>
+          <div class="services__btn"><button>Get Started</button></div>
+        </div>
+        <div class="services__card">
+          <h2>Infinite Choices</h2>
+          <p>1000's of colors</p>
+          <div class="services__btn"><button>Get Started</button></div>
         </div>
       </div>
     </div>
