Fixed img_container center alignment

--- a/index.html
+++ b/index.html
@@ -93,6 +93,60 @@
       </div>
     </div>
 
+    <!-- Feature Section  -->
+    <div class="main" id="Sign-up">
+      <div class="main__container">
+        <div class="main__content">
+          <h1>Join Out Team</h1>
+          <h2>Sign up Today</h2>
+          <p>See what makes us different</p>
+          <button class="main__btn"><a href="#">Sign Up</a></button>
+        </div>
+        <div class="main__img--container">
+          <div class="main__img--card" id="card-2">
+            <i class="fas fa-users"></i>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Footer Section  -->
+    <div class="footer_container">
+      <div class="footer__links">
+        <div class="footer__link--wrapper">
+          <div class="footer__link--items">
+            <h2>About Us</h2>
+            <a href="/sign-up">How it works</a>
+            <a href="/sign-up">Testimovials</a>
+            <a href="/sign-up">Careers</a>
+            <a href="/sign-up">Terms of Service</a>
+          </div>
+          <div class="footer__link--items">
+            <h2>About Us</h2>
+            <a href="/sign-up">How it works</a>
+            <a href="/sign-up">Testimovials</a>
+            <a href="/sign-up">Careers</a>
+            <a href="/sign-up">Terms of Service</a>
+          </div>
+        </div>
+        <div class="footer__link--wrapper">
+          <div class="footer__link--items">
+            <h2>About Us</h2>
+            <a href="/sign-up">How it works</a>
+            <a href="/sign-up">Testimovials</a>
+            <a href="/sign-up">Careers</a>
+            <a href="/sign-up">Terms of Service</a>
+          </div>
+          <div class="footer__link--items">
+            <h2>About Us</h2>
+            <a href="/sign-up">How it works</a>
+            <a href="/sign-up">Testimovials</a>
+            <a href="/sign-up">Careers</a>
+            <a href="/sign-up">Terms of Service</a>
+          </div>
+        </div>
+      </div>
+    </div>
     <script src="app.js"></script>
   </body>
 </html>
