--- a/index.html
+++ b/index.html
@@ -111,41 +111,64 @@
     </div>
 
     <!-- Footer Section  -->
-    <div class="footer_container">
+    <div class="footer__container">
       <div class="footer__links">
         <div class="footer__link--wrapper">
           <div class="footer__link--items">
             <h2>About Us</h2>
             <a href="/sign-up">How it works</a>
-            <a href="/sign-up">Testimovials</a>
-            <a href="/sign-up">Careers</a>
-            <a href="/sign-up">Terms of Service</a>
+            <a href="/">Testimovials</a>
+            <a href="/">Careers</a>
+            <a href="/">Terms of Service</a>
           </div>
           <div class="footer__link--items">
-            <h2>About Us</h2>
-            <a href="/sign-up">How it works</a>
-            <a href="/sign-up">Testimovials</a>
-            <a href="/sign-up">Careers</a>
-            <a href="/sign-up">Terms of Service</a>
+            <h2>Contact Us</h2>
+            <a href="/">Contact</a>
+            <a href="/">Support</a>
+            <a href="/">Destinations</a>
           </div>
         </div>
         <div class="footer__link--wrapper">
           <div class="footer__link--items">
-            <h2>About Us</h2>
-            <a href="/sign-up">How it works</a>
-            <a href="/sign-up">Testimovials</a>
-            <a href="/sign-up">Careers</a>
-            <a href="/sign-up">Terms of Service</a>
+            <h2>Videos</h2>
+            <a href="/">Submit Video</a>
+            <a href="/">Ambassadors</a>
+            <a href="/">Agency</a>
           </div>
           <div class="footer__link--items">
-            <h2>About Us</h2>
-            <a href="/sign-up">How it works</a>
-            <a href="/sign-up">Testimovials</a>
-            <a href="/sign-up">Careers</a>
-            <a href="/sign-up">Terms of Service</a>
+            <h2>Social Media</h2>
+            <a href="/">Instagram</a>
+            <a href="/">Facebook</a>
+            <a href="/">Youtube</a>
+            <a href="/">Twitter</a>
           </div>
         </div>
       </div>
+      <setion class="social__media">
+        <div class="social__media--wrap">
+          <div class="footer__logo">
+            <a href="/" id="footer__logo">COLOR</a>
+          </div>
+          <p class="website__rights">COLOR 2020. All rights reserved</p>
+          <div class="social__icons">
+            <a href="/" class="social__icon--link" target="_blank">
+              <i class="fab fa-facebook"></i>
+            </a>
+            <a href="/" class="social__icon--link" target="_blank">
+              <i class="fab fa-instagram"></i>
+            </a>
+            <a href="/" class="social__icon--link" target="_blank">
+              <i class="fab fa-youtube"></i>
+            </a>
+            <a href="/" class="social__icon--link" target="_blank">
+              <i class="fab fa-linkedin"></i>
+            </a>
+            <a href="/" class="social__icon--link" target="_blank">
+              <i class="fab fa-twitter"></i>
+            </a>
+          </div>
+        </div>
+      </setion>
     </div>
     <script src="app.js"></script>
   </body>
